update category client

--- a/views/client/paritials/header.pug
+++ b/views/client/paritials/header.pug
@@ -48,18 +48,18 @@
             li
                 a(href='/')
                     i.icon-home.fa-solid.fa-house.set-icon-header
-                    |                         Trang Chủ
+                    |Trang Chủ
             li
-                a(href='')
+                a(href='#')
                     | Thể Loại
                     i.fa-solid.fa-caret-down
                 ul.subnav
                     li
-                        a(href='') Huyền Huyễn
+                        a(href='/') Huyền Huyễn
                     li
                         a(href='') Xuyên Không
                     li
-                        a(href='') Trùng Sinh
+                        a(href='/cn-animation') CN Animation
                     li
                         a(href='') Tiên Hiệp
                     li
@@ -71,48 +71,48 @@
                     li
                         a(href='') Hiện Đại
             li
-                a(href='') Phim Lẻ
+                a(href='/phim-le') Phim Lẻ
             li
-                a(href='')
+                a(href='/dang-chieu')
                     i.fa-solid.fa-arrows-rotate
-                    |                         Đang Chiếu
+                    |Đang Chiếu
             li
                 a(href='')
                     i.fa-regular.fa-calendar-xmark
                     |                         Lịch Chiếu
             li
-                a(href='')
+                a(href='/hoan-thanh')
                     i.fa-regular.fa-circle-check
                     |                         Hoàn Thành
             li
-                a(href='')
+                a(href='/sap-chieu')
                     i.fa-regular.fa-clock
                     |                         Sắp Chiếu
             li
-                a(href='')
+                a(href='/top-10-hot')
                     i.fa-solid.fa-trophy
                     |                         Top 10 Hot
             li
-                a(href='')
+                a(href='/dang-xem')
                     i.fa-solid.fa-thumbs-up
                     |                         Đáng Xem
-            li.width-info-user
-                .container-info-user.visible
-                    .user
-                        img.img-user(src='' alt='')
-                        .name-user
-                        ul
-                            li
-                                a(href='')
-                                    i.fa-solid.fa-user.set-icon-info-user
-                                    | Thông Tin
-                            li
-                                a(href='')
-                                    i.fa-solid.fa-eye.set-icon-info-user
-                                    | Thông báo
-                            li
-                                a(href='/logout')
-                                    i.fa-solid.fa-right-from-bracket.set-icon-info-user
-                                    | Đăng xuất
+            //- li.width-info-user
+            //-     .container-info-user.visible
+            //-         .user
+            //-             img.img-user(src='' alt='')
+            //-             .name-user
+            //-             ul
+            //-                 li
+            //-                     a(href='')
+            //-                         i.fa-solid.fa-user.set-icon-info-user
+            //-                         | Thông Tin
+            //-                 li
+            //-                     a(href='')
+            //-                         i.fa-solid.fa-eye.set-icon-info-user
+            //-                         | Thông báo
+            //-                 li
+            //-                     a(href='/logout')
+            //-                         i.fa-solid.fa-right-from-bracket.set-icon-info-user
+            //-                         | Đăng xuất
 
 
