--- a/public/css/styte.css
+++ b/public/css/styte.css
@@ -351,7 +351,7 @@
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(6, 6, 6, 0.55) 30%, rgba(0, 0, 0, 0.92) 100%);
     color: #fff;
     font-weight: 550;
-    height: 40%;
+    height: 50px;
 }
 
 .container-new-firm .text-info-new-firm {
