--- a/views/client/paritials/header.pug
+++ b/views/client/paritials/header.pug
@@ -4,14 +4,14 @@
         .content-header
             .logo
                 p.site-title
-                    a(href='/') Trang Chu
+                    a(href='/') Trang chủ
             .search-firm
                 form#search-form
                     i.fa-solid.fa-magnifying-glass
                     input#p(
                         name='keywork' 
                         type='text' 
-                        placeholder='Nhan Vao Day De Tim Kiem'
+                        placeholder='Nhấn vào đây để tìm kiếm'
                         value = keywork
                     )
                 //- .container-result-search.visible
@@ -55,13 +55,13 @@
                     i.fa-solid.fa-caret-down
                 ul.subnav
                     li
-                        a(href='/') Huyền Huyễn
+                        a(href='/') Việt Nam
                     li
-                        a(href='') Xuyên Không
+                        a(href='') Cổ tích
                     li
                         a(href='/cn-animation') CN Animation
                     li
-                        a(href='') Tiên Hiệp
+                        a(href='') Thần thoại
                     li
                         a(href='') Cổ Trang
                     li
