--- a/views/admin/paritials/header.pug
+++ b/views/admin/paritials/header.pug
@@ -23,7 +23,7 @@ link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome
       if(role.permissions.includes("products_views"))
         li
           a(href='/admin/products')
-            ion-icon(name='star-outline')
+            i(class = "fa-solid fa-film")
             span Danh sách phim
       if(role.permissions.includes("products-category_views"))
         li
