--- a/views/admin/pages/home/index.pug
+++ b/views/admin/pages/home/index.pug
@@ -3,4 +3,51 @@
 extends ../../layouts/default.pug
 
 block main 
-    h1 Trang Tổng quan
+    h1 Trang tổng quan
+
+    .row.mt-4 
+        .col-12 
+            .card.mb-4 
+                .card-header Thông tin tài khoản
+                .card-body 
+                    if(user.avatar)
+                        img(
+                            src = user.avatar 
+                            style = "height : 100px;margin-bottom : 15px"
+                        )
+                    if(user.fullName)
+                        p Họ tên  : <b> #{user.fullName} </b>
+                    if(user.email)
+                        p Email : <b> #{user.email} </b>
+                    if(user.phone)
+                        p Số điện thoại : <b> #{user.phone} </b>
+                    if(role.title)
+                        p Phân quyền : <b> #{role.title} </b>
+        .col-6 
+            .card.mb-4
+                .card-header Danh mục phim
+                .card-body 
+                    p Số lượng: <b> #{statistic.categoryMovie.total} </b>
+                    p Hoạt động: <b> #{statistic.categoryMovie.active} </b>
+                    p Dừng hoạt động: <b> #{statistic.categoryMovie.inactive} </b>
+        .col-6 
+            .card.mb-4
+                .card-header Phim
+                .card-body 
+                    p Số lượng: <b> #{statistic.movie.total} </b>
+                    p Hoạt động: <b> #{statistic.movie.active} </b>
+                    p Dừng hoạt động: <b> #{statistic.movie.inactive} </b>
+        .col-6 
+            .card.mb-4
+                .card-header Tài khoản admin
+                .card-body 
+                    p Số lượng: <b> #{statistic.account.active} </b>
+                    p Hoạt động: <b> #{statistic.account.active} </b>
+                    p Dừng hoạt động: <b> #{statistic.account.inactive} </b>
+        .col-6 
+            .card.mb-4
+                .card-header Tài khoản client
+                .card-body 
+                    p Số lượng: <b> #{statistic.user.active} </b>
+                    p Hoạt động: <b> #{statistic.user.active} </b>
+                    p Dừng hoạt động: <b> #{statistic.user.inactive} </b>
