--- a/views/admin/paritials/headerr.pug
+++ b/views/admin/paritials/headerr.pug
@@ -25,7 +25,7 @@ body
             li
                 .iocn-link
                     a(href='/admin/products')
-                        i.bx.bx-collection
+                        i(class = "fa-solid fa-film")
                         span.link_name Danh sách phim
                     i.bx.bxs-chevron-down.arrow
                 ul.sub-menu
