--- a/views/client/layouts/default.pug
+++ b/views/client/layouts/default.pug
@@ -5,6 +5,7 @@ html
         link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css")
         link(rel="stylesheet", href="/css/styte.css")
         link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css")
+        link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css")
     body 
         #main 
 
@@ -16,5 +17,6 @@ html
     script(src="https://code.jquery.com/jquery-3.2.1.slim.min.js") 
     script(src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js") 
     script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js") 
+    script(src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js") 
     script(src = "/js/script.js")
 
