--- a/views/client/pages/watch/index.pug
+++ b/views/client/pages/watch/index.pug
@@ -78,9 +78,12 @@ block main
               if(user)
                 .form-comment
                   .avata-user
-                    img(src= movie.avata alt='')
+                    img(src= user.avata)
                   .main-form
-                    form(action='/phim/comment/{{firmupdate._id}}?_method=PUT')
+                    form(
+                      action=`/phim/comment/${movie.id}`
+                      method = "POST"
+                    )
                       input(type='text' placeholder='Tham Gia Bình Luận' name='comment')
                       .btn-send
                         button Gửi
@@ -102,7 +105,19 @@ block main
                     .choose-sort.disable
                       span.set-choose-sort Cũ nhất
                       span.set-choose-sort Phổ biến
-
+                if(movie.comments)
+                  .container-comment
+                    .main-comment
+                      each item in movie.comments
+                        .comment-top
+                          .avata-user
+                            if(item.user.avata)
+                              img(src= item.user.avata alt='')
+                          .text-comment
+                            .nameUser
+                              span #{item.user.userName}
+                            .content-comment
+                              p #{item.comment}
     script(src="/js/watch.js") 
 
  
